1. Version 0.0.4 2. auf jdk-23 aktualisiert 3. index.html fertiggestellt mit aufteilung Links Column und Recht Column 4. anzeige von Fragmenten in MsgController und in index.html mit Thymeleaf fertiggestellt 5. auf Einloggen in Jeder Controller integriert 6. bei verkleinert der Browser slider effect integriert 7. click-funktionen für den msg/setting-Start/Schliessen 8. hiobsClient logout in Setting eingebaut, einfach die Tabelle Auth geleert 9. Jar-Datei erstellt und Getestet, Login/ausloggen OK